--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -86,7 +86,7 @@ body {
 	width: 100%;
 	height: 100%;
 	pointer-events: none;
-	background: url(/../noise.gif);
+	background: url(./noise.gif);
 	mix-blend-mode: multiply;
 	opacity: 0.04;
 	pointer-events: none;
