Player animations fix, font loading fix, hitbox fix, sound fix
Sound for jumping and landing stops after a while.
Hit boxes seem to be misaliged.
Walking animation is not working. Use threejs' own animation system.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,23 @@
+@font-face {
+
+	font-family: 'Silkscreen';
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+ 	src: url('https://fonts.gstatic.com/s/silkscreen/v4/m8JUjfVPf62XiF7kO-i9aAhAfmyi2A.woff2') format('woff2');
+
+}
+
+@font-face {
+	
+	font-family: 'Silkscreen';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url('https://fonts.gstatic.com/s/silkscreen/v4/m8JXjfVPf62XiF7kO-i9YLNlaw.woff2') format('woff2');
+
+}
+
 :root {
 
 	--mobile-controls-size-small: 64px;
