--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,7 +4,7 @@
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
- 	src: url('https://fonts.gstatic.com/s/silkscreen/v4/m8JUjfVPf62XiF7kO-i9aAhAfmyi2A.woff2') format('woff2');
+	src: url('https://fonts.gstatic.com/s/silkscreen/v4/m8JUjfVPf62XiF7kO-i9aAhAfmyi2A.woff2') format('woff2');
 
 }
 
@@ -37,6 +37,12 @@
 
 }
 
+img {
+	
+	pointer-events: none;
+
+}
+
 .flex {
 
 	display: flex;
@@ -59,23 +65,23 @@
 .loader {
 
 	z-index: 10;
-    width: 64px;
-    height: 64px;
-    border: 10px solid transparent;
-    border-top: 10px solid #000;
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    position: absolute;
-    animation: spin 1s linear infinite;
+	width: 64px;
+	height: 64px;
+	border: 10px solid transparent;
+	border-top: 10px solid #000;
+	border-radius: 50%;
+	top: 50%;
+	left: 50%;
+	translate: -50% -50%;
+	position: absolute;
+	animation: spin 1s linear infinite;
 
 }
 
 @keyframes spin {
 
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 
 }
 
@@ -108,9 +114,9 @@ body {
 	pointer-events: none;
 	background: url(../noise.gif);
 	mix-blend-mode: multiply;
-	opacity: 0.04;
+	opacity: 0.03;
 	pointer-events: none;
-	z-index: 10;
+	z-index: 20;
 
 }
 
@@ -119,6 +125,10 @@ canvas {
 	position: absolute;
 	z-index: 0;
 	transition: filter 0.4s;
+	image-rendering: pixelated;
+	image-rendering: crisp-edges; /* fallback for older browsers */
+	transform: scale(1); /* zoom 4x */
+	transform-origin: top left; /* or center, depending where you want to zoom from */
 
 }
 
@@ -187,14 +197,12 @@ canvas {
 	cursor: pointer;
 	gap: 8px;
 	z-index: 10;
-    right: 32px;
-    top: 32px;
-   	color: #292929;
-   	font-weight: bold;
-    padding: 10px 12px;
-    opacity: .4;
-    transition: outline-offset .2s, scale .2s, background-color .125s, letter-spacing .2s;
-
+	right: 32px;
+	top: 32px;
+	color: #292929;
+	font-weight: bold;
+	padding: 8px 12px 10px 12px;
+	opacity: .4;
 }
 
 #close-pause-menu-button {
@@ -209,8 +217,10 @@ canvas {
 	background-color: #292929;
 	color: white;
 	outline-color: transparent;
-	scale: 1.05;
 	opacity: 1;
+	box-shadow: 
+		0 8px 0 -4px #292929,
+		0 -8px 0 -4px #292929;
 
 	.key {
 
@@ -226,23 +236,26 @@ canvas {
 #open-pause-menu-button:focus,
 #close-pause-menu-button:focus {
 
-	outline: 6px solid plum;
-	animation-name: button-focus;
-	animation-duration: 1.75s;
-	animation-iteration-count: infinite;
-	animation-timing-function: ease-in-out;
+	box-shadow: 
+		0 8px 0 -4px #292929,
+		0 -8px 0 -4px #292929,
+		0 0 0 4px plum,
+		0 8px plum,
+		0 -8px plum;
 
 }
 
 #open-pause-menu-button:active,
 #close-pause-menu-button:active {
 
-	scale: 0.975;
-	outline: 6px solid white;
+	outline: 0px solid transparent;
 	outline-offset: 0px;
-	animation-name: button-active;
-	animation-duration: .2s;
-	animation-iteration-count: 1;
+	box-shadow: 
+		0 8px 0 -4px #292929,
+		0 -8px 0 -4px #292929,
+		0 0 0 4px white,
+		0 8px white,
+		0 -8px white;
 
 }
 
@@ -267,227 +280,416 @@ canvas {
 
 }
 
-.ui	.menu-container {
-
+.level {
+	
 	position: absolute;
-	top: 50%;
-	translate: 0 calc(-50% - 25px);
-	align-self: center;
-	align-items: center;
-	gap: 20px;
-	width: 280px;
-
+	font-size: 24px;
+	z-index: 1;
+	color: #667a5e;
+    top: 35px;
+    left: 32px;
+    mix-blend-mode: difference;
 }
 
-.ui	h1,
-.ui h2 {
+.bold {
 
-	color: black;
-	font-family: "Silkscreen";
-	padding: 0;
-	letter-spacing: 6px;
-	font-size: 32px;
-
-}
-
-@keyframes logo {
-
-	50% {
-
-		text-shadow: 
-			0 var(--logo-border-max-offset) var(--logo-border-max-color), 
-			0 calc(-1 * var(--logo-border-max-offset)) var(--logo-border-max-color), 
-			var(--logo-border-max-offset) 0 var(--logo-border-max-color), 
-			calc(-1 * var(--logo-border-max-offset)) 0 var(--logo-border-max-color);
-
-	}
-
-}
-
-.ui h1 {
-
-	-webkit-text-stroke: 1px #932886;
-	text-shadow: 
-		0 var(--logo-border-min-offset) var(--logo-border-min-color), 
-		0 calc(-1 * var(--logo-border-min-offset)) var(--logo-border-min-color), 
-		var(--logo-border-min-offset) 0 var(--logo-border-min-color), 
-		calc(-1 * var(--logo-border-min-offset)) 0 var(--logo-border-min-color);
-	font-size: 56px;
-	animation-name: logo;
-	animation-duration: 10s;
-	animation-iteration-count: infinite;
-	animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1.0);
-
-}
-
-.ui	button {
-
-	width: 100%;
-	font-family: "Silkscreen";
-	font-size: 16px;
-	background-color: #292929;
-	outline-color: white;
-	border: none;
-	padding: 18px 22px;
-	color: white;
-	letter-spacing: 1px;
-	cursor: pointer;
-	transition: outline .2s, scale .2s, background-color .125s, letter-spacing .2s;
+	font-weight: bold;
 
 }
 
 @keyframes button-focus {
 
 	0% {
+	
+		box-shadow: 
+		
+		0px 6px #303734,
 
-	    outline-width: 8px;
-	    outline-offset: 2px;
+		-3px -6px #151a18,
+		3px -6px #151a18,
+		0px -9px #151a18,
+
+		3px 3px #303734,
+		-3px 3px #303734,
+
+		0px 12px 0 3px rgba(0,0,0,.1),
+
+		6px 9px 0 3px plum,
+		-6px 9px 0 3px plum,
+		0px 9px 0 6px plum;
 	
 	}
 
 	50% {
 	
-	    outline-width: 6px;
-	    outline-offset: 6px;
+		box-shadow: 
+		
+		0px 6px #303734,
+
+		-3px -6px #151a18,
+		3px -6px #151a18,
+		0px -9px #151a18,
+
+		3px 3px #303734,
+		-3px 3px #303734,
+
+		0px 12px 0 3px rgba(0,0,0,.1),
+
+		6px 9px 0 0px plum,
+		-6px 9px 0 0px plum,
+		0px 9px 0 3px plum;
 	
 	}
 
 	100% {
 	
-	    outline-width: 8px;
-	    outline-offset: 2px;
+		box-shadow: 
+		
+		0px 6px #303734,
+
+		-3px -6px #151a18,
+		3px -6px #151a18,
+		0px -9px #151a18,
+
+		3px 3px #303734,
+		-3px 3px #303734,
+
+		0px 12px 0 3px rgba(0,0,0,.1),
+
+		6px 9px 0 3px plum,
+		-6px 9px 0 3px plum,
+		0px 9px 0 6px plum;
 	
 	}
 
-}
-
-.ui	button:focus,
-.ui input[type="range"]:focus {
-
-	background-color: #222;
-	outline: 6px solid plum; 
-	outline-offset: 3px;
-	letter-spacing: 2px;
-	animation-name: button-focus;
-	animation-duration: 1.75s;
-	animation-iteration-count: infinite;
-	animation-timing-function: ease-in-out;
 
 }
 
-.ui button:hover,
-.ui input[type="range"]:hover {
+.menu {
 
-	scale: 1.025;
-	background-color: #222;
-
-}
-
-@keyframes button-active {
-
-	0% {
+	.overlayscrollbars {
 	
-	    box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.3);
-	
+		width: calc(100% - 100px);
+        padding: 10px 36px;
+        touch-action: auto;
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+
 	}
 
-	100% {
-	
-	    box-shadow: 0 0 0 50px rgba(255, 255, 255, 0);
-	
+	.os-scrollbar {
+
+		background-color: transparent;
+		width: 18px !important;
+		right: -5px !important;
+
 	}
 
-}
+	.os-scrollbar-track {
 
-.ui button:active,
-.ui input[type="range"]:active {
+		background-color: rgba(0, 0, 0, 0.2) !important;
+		border-radius: 0 !important;
+		width: 4px !important;
+		height: calc(100%) !important;
+		overflow: visible;
 
-	scale: 0.975;
-	outline: 8px solid white;
-	outline-offset: 0px;
-	animation-name: button-active;
-	animation-duration: .2s;
-	animation-iteration-count: 1;
+	}
 
-}
+	.os-scrollbar-handle {
 
-.ui .input-container {
+		background-color: #151a18 !important;
+		border-radius: 0 !important;
+		width: 18px !important;
+		margin-right: -7px;
+		box-shadow: 
+			0 -6px 0 -3px #151a18,
+			0 6px 0 -3px #151a18 !important;
 
-	width: 100%;
-	position: relative;
-	transition: scale .2s;
+	}
 
-}
+	.os-scrollbar-handle:hover {
+		
+		background-color: #555;
 
-.ui .input-container:hover {
+	}
 
-	scale: 1.025;
+	.logo {
 
-}
+		position: relative;
+		height: 120px;
+		image-rendering: pixelated;
+		image-rendering: crisp-edges;
+		padding-top: 80px;
+		background-image: url('../Logo.png');
+		background-repeat: no-repeat;
+		background-size: 100%;
+		background-position-y: 70px;
+		width: calc(100% - 44px);
+		margin: 0 22px;
 
-.ui .input-range-label {
+	}
 
-	position: absolute;
-	width: 100%;
-	z-index: 3;
-	text-align: center;
-	pointer-events: none;
-	top: 9px;
-	font-size: 14px;
-	mix-blend-mode: exclusion;	
-	color: white;
+	button, input[type="range"] {
 
-}
+		font-smooth: never;
+		-webkit-font-smoothing: none;
+		width: 100%;
+		font-family: "Silkscreen";
+		font-size: 18px;
+		text-shadow: 0 2px #626a67;
+		font-weight: bold;
+		background-color: #151a18;
+		border: none;
+		padding: 15px 0 24px 0;
+		color: white;
+		letter-spacing: 0px; 
+		cursor: pointer;
+		height: 60px;
+		box-shadow: 
+			
+			0px 6px #303734,
 
-.ui input[type="range"] {
+			-3px -3px #151a18,
+			3px -3px #151a18,
+			0px -6px #151a18,
 
-	appearance: none;
-	width: calc(100% - 16px);
-	padding: 0 8px;
-	margin: 0;
-	height: 36px;
-	background-color: #292929;
-	outline-color: white;
-	transition: outline .2s, scale .2s, background-color .125s;
+			3px 3px #303734,
+			-3px 3px #303734,
 
-}
+			0px 12px 0 3px rgba(0,0,0,.01),
 
-.ui input[type="range"]:hover {
-	scale: 1;
-}
+			6px 9px 0 3px #bbbbbb,
+			-6px 9px 0 3px #bbbbbb,
+			0px 9px 0 6px #adadad;
 
-.ui input[type="range"]:active {
+		transition: padding .025s, box-shadow .1s;
+		transition-timing-function: steps(3, end);
 
-	outline-color: white;
+	}
 
-}
+	button {
 
-.ui input[type="range"]::-webkit-slider-thumb {
-	
-	appearance: none;
-	width: 22px;
-	height: 22px;
-	background: #CCC;
-	cursor: pointer;
+		height: auto;
 
-}
+	}
 
-.ui input[type="range"]::-moz-range-thumb {
-	
-	appearance: none;
-	width: 32px;
-	height: 32px;
-	background: #04AA6D;
-	cursor: pointer;
+	button:focus,
+	input[type="range"]:focus {
+
+		letter-spacing: 2px;
+		outline: none;
+		animation-name: button-focus;
+		animation-duration: 1.75s;
+		animation-iteration-count: infinite;
+		animation-timing-function: steps(3, end);
+
+	}
+
+	button:hover,
+	input[type="range"]:hover,
+	button:focus,
+	input[type="range"]:focus {
+
+		padding: 12px 0 27px 0;
+		box-shadow: 
+			
+			0px 6px #303734,
+
+			-3px -6px #151a18,
+			3px -6px #151a18,
+			0px -9px #151a18,
+
+			inset 0 -1px #303734,
+
+			3px 3px #303734,
+			-3px 3px #303734,
+
+			0px 12px 0 3px rgba(0,0,0,.1),
+
+			6px 9px 0 3px #bbbbbb,
+			-6px 9px 0 3px #bbbbbb,
+			0px 9px 0 6px #adadad;
+
+	}
+
+	button:active,
+	input[type="range"]:active {
+
+		padding: 16px 0 25px 0;
+		
+		box-shadow: 
+			
+			0px 3px #151a18,
+			0px 6px #303734,
+
+			-3px 0px #151a18,
+			3px -0px #151a18,
+			0px -3px #151a18,
+
+			3px 3px #303734,
+			-3px 3px #303734,
+
+
+			0px 8px 0 3px rgba(0,0,0,.005),
+			0px 21px 0 3px rgba(0,0,0,.01),
+
+			6px 9px 0 3px white,
+			-6px 9px 0 3px white,
+			0px 9px 0 6px white 
+			!important;
+
+	}
+
+	input[type="range"]:hover,
+	input[type="range"]:focus {
+
+		padding: 0 8px;
+
+
+	}
+
+	button:disabled {
+
+		pointer-events: none;
+		filter: contrast(0.7) brightness(1.2);
+
+	}
+
+	.input-container {
+
+		width: 100%;
+		position: relative;
+
+	}
+
+	.input-range-label {
+
+		font-weight: bold;
+		position: absolute;
+		width: 100%;
+		z-index: 3;
+		text-align: center;
+		pointer-events: none;
+		top: 4px;
+		font-size: 18px;
+		mix-blend-mode: exclusion;	
+		color: white;
+
+	}
+
+	.input-container:hover .input-range-label,
+	.input-container:focus-within .input-range-label {
+
+		top: 1px; 
+
+	}
+
+	.input-container:active .input-range-label {
+
+		top: 4px;
+
+	}	
+
+	input[type="range"] {
+
+		appearance: none;
+		width: calc(100% - 16px);
+		padding: 0 8px;
+		margin: 0;
+		height: 36px;
+		outline-color: white;
+		transition: outline .2s, scale .2s, background-color .125s;
+
+	}
+
+	input[type="range"]:hover {
+		scale: 1;
+	}
+
+	input[type="range"]:active {
+
+		outline-color: white;
+
+	}
+
+	input[type="range"]::-webkit-slider-thumb {
+		
+		appearance: none;
+		width: 22px;
+		height: 22px;
+		background: #CCC;
+		cursor: pointer;
+		box-shadow: 
+			0 4px 0 -2px #CCC,
+			0 -4px 0 -2px #CCC;
+
+	}
+
+	input[type="range"]::-moz-range-thumb {
+		
+		appearance: none;
+		width: 32px;
+		height: 32px;
+		background: #04AA6D;
+		cursor: pointer;
+
+	}
+
+	.menu-container {
+
+		/* position: absolute; */
+		/* top: 50%; */
+		/* translate: 0 calc(-50% - 25px); */
+		align-self: center;
+		align-items: center;
+		gap: 40px;
+		max-width: 560px;
+		width: 100%;
+		max-height: calc(100% - 22px);
+
+	}
+
+	h2 {
+
+		font-family: "Silkscreen";
+		padding: 0;
+		text-align: center;
+		color: black;
+		font-size: 42px;
+		font-weight: bold;
+		text-shadow: 0 6px rgba(0, 0, 0, .2);
+		margin: 91px 0 30px 0;
+
+	}
+
+	.button-container {
+
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 40px;
+		padding-bottom: 10px;
+
+	}
+
+	.two-panel {
+
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		gap: 40px;
+		align-items: center;
+
+	}
 
 }
 
 .joystick {
 
 	bottom: 34px;
-	left: 44px;
-	width: 74px;
-	height: 74px;
+	left: 54px;
+	width: 94px;
+	height: 94px;
 	background-color: grey;
 	border-radius: 50%;
 	position: absolute;
@@ -498,40 +700,56 @@ canvas {
 
 .stick {
 
-	width: 46px;
-	height: 46px;
+	width: 66px;
+	height: 66px;
 	background-color: darkgrey;
 	border-radius: 50%;
 	position: absolute;
 	pointer-events: auto;
 	top: 50%;
 	left: 50%;
-	margin-top: -23px;
-	margin-left: -23px;
-	transition: translate 0.1s;
+	margin-top: -33px;
+	margin-left: -33px;
+	box-shadow: 0 0 0 6px grey;
+	transition: translate 0.1s, box-shadow 0.1s;
 
 }
 
 #jump-button {
 
 	bottom: 34px;
-	right: 44px;
-	width: 74px;
-	height: 74px;
+	right: 54px;
+	width: 94px;
+	height: 94px;
 	background-color: darkgrey;
 	border-radius: 50%;
 	overflow: hidden;
 	position: absolute;
 	z-index: 8;
 	outline: none;
-	border: none;
+	border: 0px solid grey;
+	transition: border 0.1s, width 0.1s, height 0.1s;
 
 }
 
-#jump-button:hover {
+#jump-button.pressed {
 
-	border: 6px solid grey;
-	width: 62px;
-	height: 62px;
+	border: 14px solid grey;
+	width: 66px;
+	height: 66px;
+
+}
+
+@media (max-width: 653px) {
+
+	.menu {
+
+		.two-panel {
+
+			flex-direction: column;
+		
+		}
+
+	}
 
 }
